# ceg

./: README.rst  ceg.py  diffver.sh  install  pyproject.toml  uninstall
.github/workflows/: release.yml
ceg/: __init__.py  api.py  arg_parser.py  ceg.py  cli.py  exceptions.py  logger.py  misc.py
docs/: CNAME  ceg.html  index.html  search.js
docs/ceg/: api.html  arg_parser.html  ceg.html  cli.html  exceptions.html  logger.html  misc.html
tests/: test_ceg.py
